Made a basic layout for landingPage
  Made a basic layout for landingPage and also added required fields to the forms, also converted type from text to numbers.

--- a/views/assignmentMarksPage.ejs
+++ b/views/assignmentMarksPage.ejs
@@ -1,3 +1,78 @@
 <h1>
   The number of assessments in <%=unitCode %> is <%= noOfAssessments %>
 </h1>
+
+<% if (noOfAssessments==2){ %>
+<h5>Assessment 1:</h5>
+<form action="/finalPage" method="GET">
+  <li>
+    Percentage allocated for Assessment 1:
+    <input
+      type="number"
+      name="percentageAllocatedAssignment1"
+      min="1"
+      max="100"
+      required
+    />
+  </li>
+  <li>
+    Amount of marks obtained for Assessment 1:
+    <input
+      type="number"
+      name="marksObtainedAssignment1"
+      min="1"
+      max="100"
+      required
+    />
+  </li>
+  <li>
+    Total marks allocated for Assessment 1:
+    <input
+      type="number"
+      name="marksObtainedAssignment1"
+      min="1"
+      max="100"
+      required
+    />
+  </li>
+
+  <h5>Assessment 2:</h5>
+  <li>
+    Percentage allocated for Assessment 2:
+    <input
+      type="number"
+      name="percentageAllocatedAssignment2"
+      min="1"
+      max="100"
+      required
+    />
+  </li>
+  <li>
+    Amount of marks obtained for Assessment 2:
+    <input
+      type="number"
+      name="marksObtainedAssignment2"
+      min="1"
+      max="100"
+      required
+    />
+  </li>
+  <li>
+    Total marks allocated for Assessment 2:
+    <input
+      type="number"
+      name="marksObtainedAssignment2"
+      min="1"
+      max="100"
+      required
+    />
+  </li>
+
+  <li>
+    Your desired final marks for the unit, <%=unitCode %> :
+    <input type="number" name="desiredMarks" min="1" max="100" required />
+  </li>
+
+  <input type="submit" />
+</form>
+<% } %>
