Made a basic function to calculate marks

--- a/views/assignmentMarksPage.ejs
+++ b/views/assignmentMarksPage.ejs
@@ -68,10 +68,10 @@
     />
   </li>
 
-  <li>
+  <div>
     Your desired final marks for the unit, <%=unitCode %> :
     <input type="number" name="desiredMarks" min="1" max="100" required />
-  </li>
+  </div>
 
   <input type="submit" />
 </form>
