--- a/views/finalPage.ejs
+++ b/views/finalPage.ejs
@@ -1,10 +1,24 @@
 <h1>Results:</h1>
 
-<h3>To obtain your target marks, you'll need <%= %>% on the exam.</h3>
+<h3>
+  To obtain your target marks, you'll need <%=marksArray[0] %>% on the exam.
+</h3>
 
 <ul>
-  <li>The percentage you need on the exam to at least get an HD: <%= %>%</li>
-  <li>The percentage you need on the exam to at least get an D: <%= %>%</li>
-  <li>The percentage you need on the exam to at least get an C: <%= %>%</li>
-  <li>The percentage you need on the exam to at least get an P: <%= %>%</li>
+  <li>
+    The percentage you need on the exam to at least get an HD: <%=marksArray[1]
+    %>%
+  </li>
+  <li>
+    The percentage you need on the exam to at least get an D: <%=marksArray[2]
+    %>%
+  </li>
+  <li>
+    The percentage you need on the exam to at least get an C: <%=
+    marksArray[3]%>%
+  </li>
+  <li>
+    The percentage you need on the exam to at least get an P: <%=marksArray[4]
+    %>%
+  </li>
 </ul>
