--- a/views/landingPage.ejs
+++ b/views/landingPage.ejs
@@ -1,10 +1,11 @@
 <h1>Welcome to the Marks determining application.</h1>
 
 <form action="/form" method="GET">
-  <li>Unit Code: <input type="text" name="unitCode" /></li>
+  <li>Unit Code: <input type="text" name="unitCode" required /></li>
 
   <li>
-    No of Assessments in the Unit: <input type="text" name="noOfAssessments" />
+    No of Assessments in the Unit:
+    <input type="number" name="noOfAssessments" min="1" max="7" required />
     <input type="submit" />
   </li>
 </form>
