front end for all the pages added.

--- a/views/assignmentMarksPage.ejs
+++ b/views/assignmentMarksPage.ejs
@@ -1,7 +1,14 @@
-<h1>
-  Kindly fill out the details below:
-  %>
-</h1>
+<head>
+  <link
+    href="https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/darkly/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-rCA2D+D9QXuP2TomtQwd+uP50EHjpafN+wruul0sXZzX/Da7Txn4tB9aLMZV4DZm"
+    crossorigin="anonymous"
+  />
+</head>
+<div class="jumbotron">
+  <h6 class="display-3">Kindly fill out the details below:</h6>
+</div>
 
 <% if (noOfAssessments==2){ %>
 
@@ -20,13 +27,13 @@
     </li>
     <li>
       Total marks allocated for Assessment 1:
-      <input type="number" name="marksAllocatedAss1" min="1" required />
+      <input type="number" name="marksAllocatedAss1" min="1" required max="1000"  />
     </li>
     <li>
       Amount of marks obtained for Assessment 1:
-      <input type="number" name="marksObtainedAss1" min="1" required />
+      <input type="number" name="marksObtainedAss1" min="1" required max="1000"  />
     </li>
-
+  </br>
     <h5>Assessment 2:</h5>
     <li>
       Percentage allocated for Assessment 2:
@@ -41,12 +48,12 @@
 
     <li>
       Total marks allocated for Assessment 2:
-      <input type="number" name="marksAllocatedAss2" min="1" required />
+      <input type="number" name="marksAllocatedAss2" min="1" required max="1000" max="1000" />
     </li>
 
     <li>
       Amount of marks obtained for Assessment 2:
-      <input type="number" name="marksObtainedAss2" min="1" required />
+      <input type="number" name="marksObtainedAss2" min="1" required max="1000" max="1000" />
     </li>
   </div>
   <br />
@@ -60,7 +67,7 @@
     <input type="number" name="desiredMarks" min="1" max="100" required />
   </div>
   <br />
-  <input type="submit" />
+  <input type="submit" class="btn btn-primary" Submit/>
 </form>
 <% } else if (noOfAssessments==3){ %>
 <form action="/finalPage" method="GET">
@@ -78,12 +85,13 @@
     </li>
     <li>
       Total marks allocated for Assessment 1:
-      <input type="number" name="marksAllocatedAss1" min="1" required />
+      <input type="number" name="marksAllocatedAss1" min="1" required max="1000" max="1000" />
     </li>
     <li>
       Amount of marks obtained for Assessment 1:
-      <input type="number" name="marksObtainedAss1" min="1" required />
+      <input type="number" name="marksObtainedAss1" min="1" required max="1000" max="1000" />
     </li>
+  </br>
 
     <h5>Assessment 2:</h5>
     <li>
@@ -99,13 +107,14 @@
 
     <li>
       Total marks allocated for Assessment 2:
-      <input type="number" name="marksAllocatedAss2" min="1" required />
+      <input type="number" name="marksAllocatedAss2" min="1" required max="1000" max="1000" />
     </li>
 
     <li>
       Amount of marks obtained for Assessment 2:
-      <input type="number" name="marksObtainedAss2" min="1" required />
+      <input type="number" name="marksObtainedAss2" min="1" required max="1000" max="1000" />
     </li>
+  </br>
 
     <h5>Assessment 3:</h5>
     <li>
@@ -121,12 +130,12 @@
 
     <li>
       Total marks allocated for Assessment 3:
-      <input type="number" name="marksAllocatedAss3" min="1" required />
+      <input type="number" name="marksAllocatedAss3" min="1" required max="1000" max="1000" />
     </li>
 
     <li>
       Amount of marks obtained for Assessment 3:
-      <input type="number" name="marksObtainedAss3" min="1" required />
+      <input type="number" name="marksObtainedAss3" min="1" required max="1000" max="1000" />
     </li>
   </div>
   <br />
@@ -140,7 +149,7 @@
     <input type="number" name="desiredMarks" min="1" max="100" required />
   </div>
   <br />
-  <input type="submit" />
+  <input type="submit" class="btn btn-primary" Submit/>
 </form>
 
 <% } else if (noOfAssessments==4){ %>
@@ -160,13 +169,13 @@
     </li>
     <li>
       Total marks allocated for Assessment 1:
-      <input type="number" name="marksAllocatedAss1" min="1" required />
+      <input type="number" name="marksAllocatedAss1" min="1" required max="1000" max="1000" />
     </li>
     <li>
       Amount of marks obtained for Assessment 1:
-      <input type="number" name="marksObtainedAss1" min="1" required />
+      <input type="number" name="marksObtainedAss1" min="1" required max="1000" max="1000" />
     </li>
-
+  </br>
     <h5>Assessment 2:</h5>
     <li>
       Percentage allocated for Assessment 2:
@@ -181,14 +190,14 @@
 
     <li>
       Total marks allocated for Assessment 2:
-      <input type="number" name="marksAllocatedAss2" min="1" required />
+      <input type="number" name="marksAllocatedAss2" min="1" required max="1000" max="1000" />
     </li>
 
     <li>
       Amount of marks obtained for Assessment 2:
-      <input type="number" name="marksObtainedAss2" min="1" required />
+      <input type="number" name="marksObtainedAss2" min="1" required max="1000" max="1000" />
     </li>
-
+  </br>
     <h5>Assessment 3:</h5>
     <li>
       Percentage allocated for Assessment 3:
@@ -203,14 +212,14 @@
 
     <li>
       Total marks allocated for Assessment 3:
-      <input type="number" name="marksAllocatedAss3" min="1" required />
+      <input type="number" name="marksAllocatedAss3" min="1" required max="1000" />
     </li>
 
     <li>
       Amount of marks obtained for Assessment 3:
-      <input type="number" name="marksObtainedAss3" min="1" required />
+      <input type="number" name="marksObtainedAss3" min="1" required max="1000" />
     </li>
-
+  </br>
     <h5>Assessment 4:</h5>
     <li>
       Percentage allocated for Assessment 4:
@@ -225,12 +234,12 @@
 
     <li>
       Total marks allocated for Assessment 4:
-      <input type="number" name="marksAllocatedAss4" min="1" required />
+      <input type="number" name="marksAllocatedAss4" min="1" required max="1000" />
     </li>
 
     <li>
       Amount of marks obtained for Assessment 4:
-      <input type="number" name="marksObtainedAss4" min="1" required />
+      <input type="number" name="marksObtainedAss4" min="1" required max="1000" />
     </li>
   </div>
 
@@ -246,7 +255,7 @@
   </div>
 
   <br />
-  <input type="submit" />
+  <input type="submit" class="btn btn-primary" Submit/>
 </form>
 
   <% } else if (noOfAssessments==5){ %>
@@ -266,13 +275,13 @@
   </li>
   <li>
     Total marks allocated for Assessment 1:
-    <input type="number" name="marksAllocatedAss1" min="1" required />
+    <input type="number" name="marksAllocatedAss1" min="1" required max="1000" />
   </li>
   <li>
     Amount of marks obtained for Assessment 1:
-    <input type="number" name="marksObtainedAss1" min="1" required />
+    <input type="number" name="marksObtainedAss1" min="1" required max="1000" />
   </li>
-
+</br>
   <h5>Assessment 2:</h5>
   <li>
     Percentage allocated for Assessment 2:
@@ -287,14 +296,14 @@
 
   <li>
     Total marks allocated for Assessment 2:
-    <input type="number" name="marksAllocatedAss2" min="1" required />
+    <input type="number" name="marksAllocatedAss2" min="1" required max="1000" />
   </li>
 
   <li>
     Amount of marks obtained for Assessment 2:
-    <input type="number" name="marksObtainedAss2" min="1" required />
+    <input type="number" name="marksObtainedAss2" min="1" required max="1000" />
   </li>
-
+</br>
   <h5>Assessment 3:</h5>
   <li>
     Percentage allocated for Assessment 3:
@@ -309,14 +318,14 @@
 
   <li>
     Total marks allocated for Assessment 3:
-    <input type="number" name="marksAllocatedAss3" min="1" required />
+    <input type="number" name="marksAllocatedAss3" min="1" required max="1000" />
   </li>
 
   <li>
     Amount of marks obtained for Assessment 3:
-    <input type="number" name="marksObtainedAss3" min="1" required />
+    <input type="number" name="marksObtainedAss3" min="1" required max="1000" />
   </li>
-
+</br>
   <h5>Assessment 4:</h5>
   <li>
     Percentage allocated for Assessment 4:
@@ -331,15 +340,15 @@
 
   <li>
     Total marks allocated for Assessment 4:
-    <input type="number" name="marksAllocatedAss4" min="1" required />
+    <input type="number" name="marksAllocatedAss4" min="1" required max="1000" />
   </li>
 
   <li>
     Amount of marks obtained for Assessment 4:
-    <input type="number" name="marksObtainedAss4" min="1" required />
+    <input type="number" name="marksObtainedAss4" min="1" required max="1000" />
   </li>
   </div>
-
+</br>
   <h5>Assessment 5:</h5>
   <li>
     Percentage allocated for Assessment 5:
@@ -354,12 +363,12 @@
 
   <li>
     Total marks allocated for Assessment 5:
-    <input type="number" name="marksAllocatedAss5" min="1" required />
+    <input type="number" name="marksAllocatedAss5" min="1" required max="1000" />
   </li>
 
   <li>
     Amount of marks obtained for Assessment 5:
-    <input type="number" name="marksObtainedAss5" min="1" required />
+    <input type="number" name="marksObtainedAss5" min="1" required max="1000" />
   </li>
   </div>
 
@@ -375,7 +384,7 @@
   </div>
 
   <br />
-  <input type="submit" />
+  <input type="submit" class="btn btn-primary" Submit/>
   </form>
 
   <% } else if (noOfAssessments==6){ %>
@@ -395,13 +404,13 @@
     </li>
     <li>
       Total marks allocated for Assessment 1:
-      <input type="number" name="marksAllocatedAss1" min="1" required />
+      <input type="number" name="marksAllocatedAss1" min="1" required max="1000" />
     </li>
     <li>
       Amount of marks obtained for Assessment 1:
-      <input type="number" name="marksObtainedAss1" min="1" required />
+      <input type="number" name="marksObtainedAss1" min="1" required max="1000" />
     </li>
-
+  </br>
     <h5>Assessment 2:</h5>
     <li>
       Percentage allocated for Assessment 2:
@@ -416,14 +425,14 @@
 
     <li>
       Total marks allocated for Assessment 2:
-      <input type="number" name="marksAllocatedAss2" min="1" required />
+      <input type="number" name="marksAllocatedAss2" min="1" required max="1000" />
     </li>
 
     <li>
       Amount of marks obtained for Assessment 2:
-      <input type="number" name="marksObtainedAss2" min="1" required />
+      <input type="number" name="marksObtainedAss2" min="1" required max="1000" />
     </li>
-
+  </br>
     <h5>Assessment 3:</h5>
     <li>
       Percentage allocated for Assessment 3:
@@ -438,14 +447,14 @@
 
     <li>
       Total marks allocated for Assessment 3:
-      <input type="number" name="marksAllocatedAss3" min="1" required />
+      <input type="number" name="marksAllocatedAss3" min="1" required max="1000" />
     </li>
 
     <li>
       Amount of marks obtained for Assessment 3:
-      <input type="number" name="marksObtainedAss3" min="1" required />
+      <input type="number" name="marksObtainedAss3" min="1" required max="1000" />
     </li>
-
+  </br>
     <h5>Assessment 4:</h5>
     <li>
       Percentage allocated for Assessment 4:
@@ -460,15 +469,15 @@
 
     <li>
       Total marks allocated for Assessment 4:
-      <input type="number" name="marksAllocatedAss4" min="1" required />
+      <input type="number" name="marksAllocatedAss4" min="1" required max="1000" />
     </li>
 
     <li>
       Amount of marks obtained for Assessment 4:
-      <input type="number" name="marksObtainedAss4" min="1" required />
+      <input type="number" name="marksObtainedAss4" min="1" required max="1000" />
     </li>
   </div>
-
+</br>
   <h5>Assessment 5:</h5>
     <li>
       Percentage allocated for Assessment 5:
@@ -483,15 +492,15 @@
 
     <li>
       Total marks allocated for Assessment 5:
-      <input type="number" name="marksAllocatedAss5" min="1" required />
+      <input type="number" name="marksAllocatedAss5" min="1" required max="1000" />
     </li>
 
     <li>
       Amount of marks obtained for Assessment 5:
-      <input type="number" name="marksObtainedAss5" min="1" required />
+      <input type="number" name="marksObtainedAss5" min="1" required max="1000" />
     </li>
   </div>
-
+</br>
   <h5>Assessment 6:</h5>
     <li>
       Percentage allocated for Assessment 6:
@@ -506,12 +515,12 @@
 
     <li>
       Total marks allocated for Assessment 6:
-      <input type="number" name="marksAllocatedAss6" min="1" required />
+      <input type="number" name="marksAllocatedAss6" min="1" required max="1000" />
     </li>
 
     <li>
       Amount of marks obtained for Assessment 6:
-      <input type="number" name="marksObtainedAss6" min="1" required />
+      <input type="number" name="marksObtainedAss6" min="1" required max="1000" />
     </li>
   </div>
 
@@ -527,7 +536,7 @@
   </div>
 
   <br />
-  <input type="submit" />
+  <input type="submit" class="btn btn-primary" Submit/>
   </form>
 
   <% } else if (noOfAssessments==7){ %>
@@ -547,13 +556,13 @@
       </li>
       <li>
         Total marks allocated for Assessment 1:
-        <input type="number" name="marksAllocatedAss1" min="1" required />
+        <input type="number" name="marksAllocatedAss1" min="1" required max="1000" />
       </li>
       <li>
         Amount of marks obtained for Assessment 1:
-        <input type="number" name="marksObtainedAss1" min="1" required />
+        <input type="number" name="marksObtainedAss1" min="1" required max="1000" />
       </li>
-  
+    </br>
       <h5>Assessment 2:</h5>
       <li>
         Percentage allocated for Assessment 2:
@@ -568,14 +577,14 @@
   
       <li>
         Total marks allocated for Assessment 2:
-        <input type="number" name="marksAllocatedAss2" min="1" required />
+        <input type="number" name="marksAllocatedAss2" min="1" required max="1000" />
       </li>
   
       <li>
         Amount of marks obtained for Assessment 2:
-        <input type="number" name="marksObtainedAss2" min="1" required />
+        <input type="number" name="marksObtainedAss2" min="1" required max="1000" />
       </li>
-  
+    </br>
       <h5>Assessment 3:</h5>
       <li>
         Percentage allocated for Assessment 3:
@@ -590,14 +599,14 @@
   
       <li>
         Total marks allocated for Assessment 3:
-        <input type="number" name="marksAllocatedAss3" min="1" required />
+        <input type="number" name="marksAllocatedAss3" min="1" required max="1000" />
       </li>
   
       <li>
         Amount of marks obtained for Assessment 3:
-        <input type="number" name="marksObtainedAss3" min="1" required />
+        <input type="number" name="marksObtainedAss3" min="1" required max="1000" />
       </li>
-  
+    </br>
       <h5>Assessment 4:</h5>
       <li>
         Percentage allocated for Assessment 4:
@@ -612,15 +621,15 @@
   
       <li>
         Total marks allocated for Assessment 4:
-        <input type="number" name="marksAllocatedAss4" min="1" required />
+        <input type="number" name="marksAllocatedAss4" min="1" required max="1000" />
       </li>
   
       <li>
         Amount of marks obtained for Assessment 4:
-        <input type="number" name="marksObtainedAss4" min="1" required />
+        <input type="number" name="marksObtainedAss4" min="1" required max="1000" />
       </li>
     </div>
-  
+  </br>
     <h5>Assessment 5:</h5>
       <li>
         Percentage allocated for Assessment 5:
@@ -635,15 +644,15 @@
   
       <li>
         Total marks allocated for Assessment 5:
-        <input type="number" name="marksAllocatedAss5" min="1" required />
+        <input type="number" name="marksAllocatedAss5" min="1" required max="1000" />
       </li>
   
       <li>
         Amount of marks obtained for Assessment 5:
-        <input type="number" name="marksObtainedAss5" min="1" required />
+        <input type="number" name="marksObtainedAss5" min="1" required max="1000" />
       </li>
     </div>
-  
+  </br>
     <h5>Assessment 6:</h5>
       <li>
         Percentage allocated for Assessment 6:
@@ -658,15 +667,15 @@
   
       <li>
         Total marks allocated for Assessment 6:
-        <input type="number" name="marksAllocatedAss6" min="1" required />
+        <input type="number" name="marksAllocatedAss6" min="1" required max="1000" />
       </li>
   
       <li>
         Amount of marks obtained for Assessment 6:
-        <input type="number" name="marksObtainedAss6" min="1" required />
+        <input type="number" name="marksObtainedAss6" min="1" required max="1000" />
       </li>
     </div>
-
+  </br>
     <h5>Assessment 7:</h5>
       <li>
         Percentage allocated for Assessment 7:
@@ -681,12 +690,12 @@
   
       <li>
         Total marks allocated for Assessment 7:
-        <input type="number" name="marksAllocatedAss7" min="1" required />
+        <input type="number" name="marksAllocatedAss7" min="1" required max="1000" />
       </li>
   
       <li>
         Amount of marks obtained for Assessment 7:
-        <input type="number" name="marksObtainedAss7" min="1" required />
+        <input type="number" name="marksObtainedAss7" min="1" required max="1000" />
       </li>
     </div>
   
@@ -702,7 +711,7 @@
     </div>
   
     <br />
-    <input type="submit" />
+    <input type="submit" class="btn btn-primary" Submit/>
     </form>
   
     <%} %>
