--- a/views/finalPage.ejs
+++ b/views/finalPage.ejs
@@ -1,4 +1,15 @@
-<h1>Results:</h1>
+<head>
+  <link
+    href="https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/darkly/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-rCA2D+D9QXuP2TomtQwd+uP50EHjpafN+wruul0sXZzX/Da7Txn4tB9aLMZV4DZm"
+    crossorigin="anonymous"
+  />
+</head>
+
+<div class="jumbotron">
+  <h6 class="display-3">Results:</h6>
+</div>
 
 <h3>
   To obtain your target marks, you'll need <%=marksArray[0] %>% on the exam.
